PullRequest: 62 [Patch v0.2.0] Move all CLI arguments into a single file and add pretty helper messages.
Merge branch fw/cli-args of git@code.alipay.com:inclusionAI/AReaL.git into main
https://code.alipay.com/inclusionAI/AReaL/pull_requests/62

Signed-off-by: 郭唯 <kira.gw@antgroup.com>


* .
* format and test
* .
* .
* .
* .
* run
* .
* .
* add runtime helper message
* .
* .

--- a/requirements.txt
+++ b/requirements.txt
@@ -44,15 +44,16 @@ tabulate
 aiofiles
 pydantic
 isort==5.13.2
-clang-format
+clang-format==19.1.7
 ninja
 paramiko
 # To eliminate security risks
 torch>2.0.0
-black>=25.1.0
+black==25.1.0
 cookiecutter>2.1.1
 asyncio
 aiohttp
 httpx>=0.28.1
 etcd3
 protobuf<3.21
+rich
