--- a/examples/configs/1.5B-distill/ppo-1.5B-distill-gpus-128.yaml
+++ b/examples/configs/1.5B-distill/ppo-1.5B-distill-gpus-128.yaml
@@ -1,16 +1,16 @@
-experiment_name: areal-1.5B-distill-gpus-8
-trial_name: 1024x8
+experiment_name: ppo-1.5B-distill-gpus-128
+trial_name: 512x16
 mode: ray
 wandb:
   mode: disabled
 recover_mode: auto
 recover_retries: 10
-allocation_mode: 'sglang.d4p1m1+d4p1m1'
-n_nodes: 1
+allocation_mode: 'sglang.d64p1m1+d32p2m1'
+n_nodes: 16
 n_gpus_per_node: 8
 cache_clear_freq: 1
 exp_ctrl:
-  total_train_epochs: 10
+  total_train_epochs: 5
   save_freq_epochs: 1
   ckpt_freq_secs: 600
 torch_cache_mysophobia: true
@@ -19,16 +19,14 @@ actor:
     _class: qwen2
   path: '/storage/models/DeepSeek-R1-Distill-Qwen-1.5B'
   optimizer:
-    lr: 1.0e-05
+    lr: 2e-05
     lr_scheduler_type: constant
-    initial_loss_scale: 262144.0
-    loss_scale_window: 5.0
+    eps: 1e-5
+    warmup_steps_proportion: 0.001
     hysteresis: 2
   sglang:
-    disable_radix_cache: true
-    context_length: 18432
     mem_fraction_static: 0.8
-    max_running_requests: 128
+    triton_attention_num_kv_splits: 16
 critic:
   type:
     _class: qwen2
@@ -41,43 +39,45 @@ ref:
   path: '/storage/models/DeepSeek-R1-Distill-Qwen-1.5B'
 actor_train:
   mb_spec:
-    max_tokens_per_mb: 19456
+    max_tokens_per_mb: 30720
 critic_train:
   mb_spec:
-    max_tokens_per_mb: 19456
+    max_tokens_per_mb: 30720
 actor_gen:
   mb_spec:
-    max_tokens_per_mb: 19456
+    max_tokens_per_mb: 30720
 critic_inf:
   mb_spec:
-    max_tokens_per_mb: 19456
+    max_tokens_per_mb: 30720
 actor_inf:
   mb_spec:
-    max_tokens_per_mb: 19456
+    max_tokens_per_mb: 30720
 ref_inf:
   mb_spec:
-    max_tokens_per_mb: 19456
+    max_tokens_per_mb: 30720
 dataset:
-  path: '/storage/datasets/prompts_for_r1_distilled_0319.jsonl'
-  max_prompt_len: 2048
-  train_bs_n_seqs: 1024
+  path: '/storage/datasets/boba_106k_0319.jsonl'
+  max_prompt_len: 1024
+  train_bs_n_seqs: 512
 ppo:
   gen:
-    max_new_tokens: 16384
+    max_new_tokens: 27648
     min_new_tokens: 0
     top_p: 1.0
     top_k: 1000000
     temperature: 1.0
+    force_no_logits_mask: True
+    use_cuda_graph: True
   ppo_n_minibatches: 4
-  kl_ctl: 0.001
+  kl_ctl: 0.0
   discount: 1.0
   value_eps_clip: 0.2
   disable_value: true
-  reward_output_scaling: 5.0
+  reward_output_scaling: 5
   reward_output_bias: 0.0
   adv_norm: true
   value_norm: true
-group_size: 8
+group_size: 16
 group_adv_norm: false
 external_configs:
   cluster_config:
