[feat] Fix rollout completion order and allow stats logging during workflow execution. (#246)
* PullRequest: 605 [Fix] FIx a bug in slurm launcher.

Merge branch mzy/fix-slurm of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/605

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* .
* .

* PullRequest: 608 [FIX] fix slurm and ray

Merge branch sxj/fix-slurm-ray of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/608?tab=comment

Reviewed-by: 晓雷 <meizhiyu.mzy@antgroup.com>


* [FIX] fix slurm and ray

* Cherry-pick commit 63d24e1f "PullRequest: 601 [FI..." 到当前分支

* Cherry-pick commit 8afd706b "PullRequest: 596 [FI..." 到当前分支

* PullRequest: 612 [Feature] [Experimental] Add model initialization for MegatronEngine

Merge branch mzy/megatron-model-init of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/612

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* experimental megatron engine init

* PullRequest: 616 [Feature] [Experimental] Add single GPU train and forward in MegatronEngine for testing purposes.

Merge branch mzy/megatron-simple-fwd-train of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/616?tab=diff

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* experimental megatron engine init
* add simple forward and train for testing
* run
* .
* .

* PullRequest: 617 [Feature] [Experimental] Add Megatron model save/load in HF format with mbridge.

Merge branch mzy/megatron-mbridge of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/617?tab=diff

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* experimental megatron engine init
* add simple forward and train for testing
* run
* try mbridge
* .
* save load test
* .
* .
* .
* .
* .

* PullRequest: 634 [fix] Fix the loading order of asynchronous rollout

Merge b

--- a/.github/workflows/test-areal.yml
+++ b/.github/workflows/test-areal.yml
@@ -41,4 +41,4 @@ jobs:
       - env:
           CI: true
         run: |
-          pytest -s -vv areal/tests
+          TOKENIZERS_PARALLELISM=true pytest -s -vv areal/tests
