--- a/requirements.txt
+++ b/requirements.txt
@@ -40,10 +40,12 @@ matplotlib
 tabulate
 aiofiles
 pydantic
-isort==5.13.2
+isort==6.0.1
 clang-format==19.1.7
 ninja
 paramiko
+megatron-core==0.13.1
+mbridge==0.13.0
 # To eliminate security risks
 torch>2.0.0
 black==25.1.0
@@ -71,7 +73,7 @@ prettytable
 gymnasium>=1.1.1
 swanlab[dashboard]
 torchdata
-autoflake
+autoflake==2.3.1
 tensordict
 deepspeed>=0.17.2
 pybase64
