[experimental] feat: megatron 5d parallel forward, reliable reward process executor, max length of dataset (#263)
* PullRequest: 639 [FEAT][EXPERIMENTAL] add megatron dcp

Merge branch sxj/megatron-dcp of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/639

Reviewed-by: 博惟 <bowei.fw@antgroup.com>


* PullRequest: 605 [Fix] FIx a bug in slurm launcher.
* PullRequest: 608 [FIX] fix slurm and ray
* Cherry-pick commit 63d24e1f "PullRequest: 601 [FI..." 到当前分支
* Cherry-pick commit 8afd706b "PullRequest: 596 [FI..." 到当前分支
* PullRequest: 612 [Feature] [Experimental] Add model initialization for MegatronEngine
* PullRequest: 616 [Feature] [Experimental] Add single GPU train and forward in MegatronEngine for testing purposes.
* PullRequest: 617 [Feature] [Experimental] Add Megatron model save/load in HF format with mbridge.
* [FEAT][EXPERIMENTAL] add megatron dcp
* format
* fix
* fix
* format

* PullRequest: 654 opt: optimizing megatron model loading from HF checkpoints

Merge branch fw/opt-mload of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/654

Reviewed-by: 晓雷 <meizhiyu.mzy@antgroup.com>


* .

* .

* .

* PullRequest: 658 chore: force to abort all requests and add transformer_engine in the installation validation script

Merge branch fw/add-te-install-valid of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/658

Reviewed-by: 晓雷 <meizhiyu.mzy@antgroup.com>


* .
* .
* .

* PullRequest: 666 [fix] fix the stats logging bug caused by using `realhf.base.stats_tracker`

Merge branch fw/fix-stats of git@code.alipay.com:inclusionAI/AReaL.git into gh
https://code.alipay.com/inclusionAI/AReaL/pull_requests/666

Reviewed-by: 晓雷 <meizhiyu.mzy@antgroup.com>


* .

* PullRequest: 653 [Feature] [Experimental] Add 5D parallel forward for MegatronEngine

Merge branch mzy/megatron-5d-parallel-2 of git@code.alipay.c

--- a/examples/lite/configs/gsm8k_grpo.yaml
+++ b/examples/lite/configs/gsm8k_grpo.yaml
@@ -38,7 +38,7 @@ actor:
   gradient_checkpointing: false
   dtype: bfloat16
   mb_spec:
-    max_tokens_per_mb: 10240
+    max_tokens_per_gpu: 10240
   optimizer:
     type: adam
     lr: 1.70e-5
@@ -71,7 +71,7 @@ ref:
   disable_dropout: true
   dtype: ${actor.dtype}
   mb_spec:
-    max_tokens_per_mb: 10240
+    max_tokens_per_gpu: 10240
   optimizer: null
   backend: fsdp
 
@@ -93,6 +93,7 @@ train_dataset:
   num_workers: 4
   path: openai/gsm8k
   type: rl
+  max_length: 1024
 
 valid_dataset:
   batch_size: 256
