--- a/areal/tests/grpo/config.yaml
+++ b/areal/tests/grpo/config.yaml
@@ -12,6 +12,7 @@ tokenizer_path: ${actor.path}
 train_dataset:
   path: openai/gsm8k
   batch_size: 64
+  max_length: 512
 saver:
   experiment_name: ${experiment_name}
   trial_name: ${trial_name}
@@ -35,7 +36,8 @@ launcher: {}
 
 gconfig:
   n_samples: 8
-  
+  max_new_tokens: 1024
+
 rollout:
   experiment_name: ${experiment_name}
   trial_name: ${trial_name}
@@ -45,7 +47,7 @@ actor:
   trial_name: ${trial_name}
   path: Qwen/Qwen3-0.6B
   mb_spec:
-    max_tokens_per_mb: 4096
+    max_tokens_per_gpu: 4096
   optimizer: {}
 
   group_size: ${gconfig.n_samples}
@@ -54,4 +56,4 @@ ref:
   trial_name: ${trial_name}
   path: ${actor.path}
   mb_spec:
-    max_tokens_per_mb: 4096
+    max_tokens_per_gpu: 4096
